SERVER-65533 Treat collection as UNSHARDED under {readConcern:available}